--- a/labs/lab-18-auth/views/users/signin.ejs
+++ b/labs/lab-18-auth/views/users/signin.ejs
@@ -1,6 +1,7 @@
 <div class="create-blog content">
   <h2 class="title">Sign In</h2>
   <form action="/users/signin" method="POST">
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <label for="username">Username</label>
     <input type="text" id="username" name="username" required />
     <label for="password">Password</label>
