--- a/labs/lab-18-auth/views/blogs/create.ejs
+++ b/labs/lab-18-auth/views/blogs/create.ejs
@@ -1,5 +1,6 @@
 <div class="create-blog content">
   <form action="/blogs" method="POST">
+    <input type="hidden" name="_csrf" value="<%= csrfToken %>">
     <label for="title">Blog title:</label>
     <input type="text" id="title" name="title" required />
     <label for="snippet">Blog snippet:</label>
