--- a/labs/lab-18-auth/views/users/signin.ejs
+++ b/labs/lab-18-auth/views/users/signin.ejs
@@ -5,7 +5,7 @@
     <label for="username">Username</label>
     <input type="text" id="username" name="username" required />
     <label for="password">Password</label>
-    <input type="text" id="password" name="password" required />
+    <input type="password" id="password" name="password" required />
     <button>Sign in</button>
   </form>
 </div>
